--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <div class="type-cont">
         <p id="word">Press Start to begin</p>
-        <input type="text" id="input" disabled />
+        <input type="text" id="input" disabled autocomplete="off" />
       </div>
 
       <div class="option-btn">
